--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "debug": "DEBUG=tmp:* ./node_modules/.bin/nodemon bin/www",
+    "debug": "DEBUG=debug ./node_modules/.bin/nodemon bin/www",
     "prd": "pm2 start bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,7 +23,8 @@
     "koa-session2": "^2.2.10",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
