--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "koa-route-ex":"https://github.com/wariii-online-judge/koa-route-ex.git",
     "debug": "^4.1.1",
     "install": "^0.13.0",
     "ioredis": "^4.14.0",
@@ -17,9 +16,11 @@
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
+    "koa-favicon": "^2.0.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
     "koa-onerror": "^4.1.0",
+    "koa-route-ex": "https://github.com/wariii-online-judge/koa-route-ex.git",
     "koa-session2": "^2.2.10",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
