[power up] 提升renderData的能力

--- a/routes/routes/index.yaml
+++ b/routes/routes/index.yaml
@@ -1,5 +1,8 @@
 # 渲染主页
-- "utils.renderData"
+- 
+  namespace: 'utils'
+  name: 'renderData'
+  argument: {}
 - 
   namespace: 'utils'
   name: 'title'
