--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa-session2": "^2.2.10",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
+    "mongoose": "^5.6.9",
     "pug": "^2.0.3",
     "svg-captcha": "^1.4.0"
   },
