:bug: 没有登录 进入相关路径的处理

--- a/routes/routes/admin/index.yaml
+++ b/routes/routes/admin/index.yaml
@@ -9,6 +9,10 @@
   argument: ''
 - 'admin.userInfo'
 - 
+  namespace: 'utils'
+  name: 'redirect'
+  argument: '/register'
+- 
   argument: "admin/index"
   name: Render
   namespace: utils
