--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
     "md5": "^2.2.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.9",
     "pug": "^2.0.3",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "voucher-code-generator": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
