--- a/routes/routes/admin/inviteCode_list.yaml
+++ b/routes/routes/admin/inviteCode_list.yaml
@@ -1,12 +1,18 @@
+# 渲染主页
 - 
   namespace: 'utils'
   name: 'renderData'
   argument: {}
+- 
+  namespace: 'utils'
+  name: 'title'
+  argument: ''
 - 'admin.userInfo'
 - 
   namespace: 'utils'
   name: 'redirect'
   argument: '/register'
 - 
-  namespace: 'admin'
-  name: 'inviteCode_create'
+  argument: "admin/inviteCode_list"
+  name: Render
+  namespace: utils
