[修改依赖] 新的koa-route-ex

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
     "koa-onerror": "^4.1.0",
-    "koa-route-ex": "https://github.com/wariii-online-judge/koa-route-ex.git",
+    "koa-route-ex": "https://github.com/rainboyOJ/koa-route-ex",
     "koa-session2": "^2.2.10",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
