--- a/routes/routes/index.yaml
+++ b/routes/routes/index.yaml
@@ -1,8 +1,11 @@
 # 渲染主页
 - 
+  namespace: 'user'
+  name: 'redirect_not_logined' # 如果没有登录就redirect 到/
+- 
   namespace: 'utils'
   name: 'renderData'
-  argument: {}
+  argument: "ctx.session"
 - 
   namespace: 'utils'
   name: 'title'
