--- a/default_config.yaml
+++ b/default_config.yaml
@@ -1,20 +1,30 @@
 # SITE
 SITE:
-    SALT: 'WAR3OJ_SALT'
+    SALT: 'ROJ_SALT' # 密码加盐
     default_admin: # 默认超级管理员
         username: 'root'
         password: 'password'
         avatar: '/images/admin/avatar.png'
 # front end path
 FRONT_END: 
-    public: 'foo/'  # 静态资源
-    views: 'bar/'   # pug 视图
+    public: '../front-end/assets'  # 静态资源
+    views: '../front-end/template/views' # pug 视图
+
+# 头像cdn
+AVATAR_CDN: "https://cdn.v2ex.com/gravatar/{md5}?s=500&d=mm"
+
+
+# 数据存放的目录,上传的数据会解压到这里
+DATA_PATH: "/home/rainboy/judge/data"
+# 数据打包目录
+DATA_PATH_ZIP: "/home/rainboy/data_zip"
 
 # koa-session2 配置
 SESSION: 
     key: "MYOJ"
     maxAge: 604800000 #1000 * 7*24*60*60
 
+# 验证码设定
 CAPTCHA:
     width: 90
     height: 40
@@ -27,9 +37,17 @@ CAPTCHA:
 
 # 数据库
 MONGODB:
-    addr: mongodb://localhost/war3oj
+    addr: mongodb://localhost/roj
     opts: 
         useNewUrlParser: true
         useCreateIndex: true # https://github.com/Automattic/mongoose/issues/6890#issuecomment-416410444
 
+REDIS: redis://127.0.0.1
 
+
+
+#远程judge的配置
+JUDGE:
+  # ip地址
+  addr: http://127.0.0.1:5000
+  token: "token" # 令牌，保持和judgeServer一样
