--- a/package.json
+++ b/package.json
@@ -6,32 +6,41 @@
     "start": "node bin/www",
     "debug": "DEBUG=debug ./node_modules/.bin/nodemon bin/www",
     "prd": "pm2 start bin/www",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "debug": "^4.1.1",
     "install": "^0.13.0",
     "ioredis": "^4.14.0",
+    "joi": "^17.2.1",
     "js-yaml": "^3.13.1",
     "koa": "^2.7.0",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
     "koa-favicon": "^2.0.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
+    "koa-mount": "^4.0.0",
     "koa-onerror": "^4.1.0",
     "koa-route-ex": "https://github.com/rainboyOJ/koa-route-ex",
+    "koa-send": "^5.0.1",
     "koa-session2": "^2.2.10",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
+    "lodash": "^4.17.20",
     "md5": "^2.2.1",
-    "moment": "^2.24.0",
+    "moment": "^2.27.0",
     "mongoose": "^5.6.9",
     "pug": "^2.0.3",
+    "socket.io-client": "^2.3.0",
     "svg-captcha": "^1.4.0",
     "voucher-code-generator": "^1.1.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "vuepress": "^1.3.1"
   }
 }
