完善 首页的显示

--- a/routes/routes/index.yaml
+++ b/routes/routes/index.yaml
@@ -11,6 +11,15 @@
   name: 'title'
   argument: ''
 - 
+  namespace: 'user'
+  name: 'info'
+- 
+  namespace: 'rank'
+  name: 'rankTop5'
+- 
+  namespace: 'sub'
+  name: 'last7DaySub'
+- 
   argument: index
   name: Render
   namespace: utils
