[add] 使用racci 做为搜索引擎  - 我觉得racci可能有性能问题

--- a/routes/index.yaml
+++ b/routes/index.yaml
@@ -82,6 +82,12 @@
     title: '数据下载'
     path: '/routes/problem/download.yaml'
     #==== 数据下载 ====
+- 
+    url: "/problem_search"
+    method: 'POST'
+    title: '题目搜索'
+    path: '/routes/problem/problem_search.yaml'
+    #==== 题目显示 ====
 
 # ============ Sub ============
 - 
