--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.6.9",
     "pug": "^2.0.3",
+    "racci": "^1.2.2",
     "socket.io-client": "^2.3.0",
     "svg-captcha": "^1.4.0",
     "voucher-code-generator": "^1.1.1"
