--- a/routes/routes/bbs/bbsList.yaml
+++ b/routes/routes/bbs/bbsList.yaml
@@ -1,4 +1,3 @@
-# 渲染主页
 - 
   namespace: 'user'
   name: 'redirect_not_logined' # 如果没有登录就redirect 到/
@@ -10,9 +9,8 @@
   namespace: 'utils'
   name: 'title'
   argument: ''
-- "problem.problem_show"
-- "bbs.bbs_about_problem_count"
+- "bbs.bbsList"
 - 
-  argument: "problem"
+  argument: "bbs/bbs"
   name: Render
   namespace: utils
